update part left
