# src/swagger.json
@@ -318,43 +318,20 @@
     },
     "/text/get/all": {
       "get": {
-        "tags": ["Get All Text"],
-        "isAuth": true,
-        "summary": "This api will return all text of logged in user",
+        "summary": "Get Texts Payload",
+        "description": "Get the payload data of Text",
         "responses": {
           "200": {
             "description": "Successfully Get",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": { "type": "string" },
-                    "status": { "type": "integer", "example": 200 },
-                    "payload": { "$ref": "#/components/schemas/User" },
-                    "isAuth": { "type": "boolean" }
-                  }
+                  "$ref": "#/components/schemas/Payload"
                 }
               }
             }
           },
-          "404": {
-            "description": "User not found or not logged in",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": { "type": "string" },
-                    "status": { "type": "integer", "example": 404 },
-                    "user": { "type": "null" },
-                    "isAuth": { "type": "boolean" }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
+          "501": {
             "description": "Internal server error",
             "content": {
               "application/json": {
@@ -362,20 +339,92 @@
                   "type": "object",
                   "properties": {
                     "message": { "type": "string" },
-                    "status": { "type": "integer", "example": 500 },
-                    "user": { "type": "object", "example": null },
-                    "isAuth": { "type": "boolean" }
+                    "status": { "type": "integer", "example": 501 },
+                    "payload": { "type": "object", "example": null }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Text Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": { "type": "string" },
+                    "status": { "type": "integer", "example": 404 },
+                    "payload": { "type": "object", "example": null }
                   }
                 }
               }
             }
           }
-        },
-        "security": [
-          {
-            "cookieAuth": []
+        }
+      }
+    },
+    "/text/element/update": {
+      "post": {
+        "tags": ["Update Element"],
+        "summary": "This api will update text elements by using element id",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DCreateTextList"
+              }
+            }
           }
-        ]
+        },
+
+        "responses": {
+          "200": {
+            "description": "Text element update successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": { "type": "string" },
+                    "status": { "type": "integer", "example": 200 }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Text element update failed",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    },
+                    "status": { "type": "integer", "example": 401 }
+                  }
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": { "type": "string" },
+                    "status": { "type": "integer", "example": 501 }
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   },
@@ -458,9 +507,60 @@
           }
         }
       },
-      "GetAllTextResponse": {
+      "Payload": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "Success message"
+          },
+          "payload": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TextPayload"
+            }
+          },
+          "status": {
+            "type": "integer",
+            "description": "HTTP status code"
+          }
+        }
+      },
+      "TextPayload": {
+        "type": "object",
+        "properties": {
+          "textId": {
+            "type": "string",
+            "description": "ID of the text"
+          },
+          "total": {
+            "type": "integer",
+            "description": "Total value"
+          },
+          "elements": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Element"
+            }
+          }
+        }
+      },
+      "Element": {
+        "type": "object",
+        "properties": {
+          "elementId": {
+            "type": "string",
+            "description": "ID of the element"
+          },
+          "isChecked": {
+            "type": "boolean",
+            "description": "Whether the element is checked"
+          },
+          "value": {
+            "type": "integer",
+            "description": "Value of the element"
+          }
+        }
       }
     },
     "securitySchemes": {
